--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -1,6 +1,7 @@
 <div class="bg-slate-700 rounded my-2 columns-2 gap-4">
     <a href="{{ url_for('get_restaurant', _id=restaurant.id)}}">
-        <img class="rounded" src="{{ url_for('static', path='img/')}}" width="400" alt="" />
+        <img
+            class="rounded" src="{{ url_for('static', path='img/' + restaurant.visual.reference_link)}}" width="400" alt="{{ restaurant.visual.description }}" />
     </a>
     <div class="p-2">
         <h1 class="font-bold text-gray-200">{{ restaurant.name }}, {{ restaurant.city }}</h1>
