--- a/bsl_menu/templates/index.html
+++ b/bsl_menu/templates/index.html
@@ -18,8 +18,16 @@
             hx-get="/restaurants?limit=4&skip=0"
             hx-target="#main-content"
         >Restaurants</button>
-        <button class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded">Visuals</button>
-        <button class="bg-green-700 hover:bg-green-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded">Register your Restaurant!</button>
+        <button
+            class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded">
+            Visuals
+        </button>
+        <button
+            class="bg-green-700 hover:bg-green-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded"
+            hx-get="/restaurants/register"
+            hx-target="#main-content"
+        >Register your Restaurant!
+        </button>
         <div class="my-2" id="main-content"></div>
         {% include 'restaurant_search_form.html' %}
     </div>
