added menu items for testing

--- a/bsl_menu/templates/register.html
+++ b/bsl_menu/templates/register.html
@@ -6,6 +6,10 @@
         <textarea rows="4" class="max-w-96 rounded px-4 py-2 block" placeholder="Describe your restaurant..."></textarea>
         <label for="year-opened">Year Opened</label>
         <input class="max-w-24 rounded px-4 py-2" type="number" id="year-opened" name="tear-opened" min="1" max="3000"/>
+        <label class="max-w-96 rounded px-4 py-2" for="sl-visual-input">Upload sign language visual</label>
+        <input class="px-4 py-2 block max-w-96 rounded cursor-pointer bg-gray-50" id="sl-visual-input" type="file">
+        <label class="max-w-96 rounded px-4 py-2" for="static-visual-input">Upload static visual</label>
+        <input class="px-4 py-2 block max-w-96 rounded cursor-pointer bg-gray-50" id="static-visual-input" type="file">
         <button
             class="max-w-24 bg-green-700 hover:bg-green-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded">
             Register
