--- a/bsl_menu/templates/restaurant_tile.html
+++ b/bsl_menu/templates/restaurant_tile.html
@@ -1,4 +1,4 @@
-<div class="bg-slate-700 rounded my-2 columns-1 gap-4 max-w-max">
+<div class="bg-slate-700 rounded my-2 max-w-max">
     <div class="p-2">
         <p class="font-bold text-gray-200">{{ restaurant.name }}</p>
         <p class="font-bold text-gray-100">{{ restaurant.city }}</p>
