--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <title>BSL Menu</title>
     <script src="https://unpkg.com/htmx.org@1.9.9"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-500 m-4">
-    <div class="mt-4">
-        <h1 class="mb-4 text-4xl font-extrabold text-gray-900">
+    <div class="mt-4 bg-teal-600 p-4 rounded">
+        <h1 class="text-4xl font-extrabold text-gray-900">
             <a href="{{ url_for('index')}}">BSL Menu</a>
         </h1>
+        Accessible menu for BSL users
     </div>
     <div id="content">
         {% block content %}
