--- a/bsl_menu/templates/pagination.html
+++ b/bsl_menu/templates/pagination.html
@@ -1,10 +1,8 @@
-<button
+<a
     class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded"
-    hx-get="/{{ endpoint }}?limit={{ limit }}&skip={{ skip - limit}}"
-    hx-target="#main-content"
->&larr; Previous</button>
-<button
+    href="{{ url_for('get_restaurants') }}?skip={{ skip | int - limit | int }}&limit={{ limit }}"
+>&larr; Previous</a>
+<a
     class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded"
-    hx-get="/{{ endpoint }}?limit={{ limit }}&skip={{ skip + limit}}"
-    hx-target="#main-content"
->Next &rarr;</button>
+        href="{{ url_for('get_restaurants') }}?skip={{ skip | int + limit | int }}&limit={{ limit }}"
+>Next &rarr;</a>
