--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-slate-500 m-4">
-    <div class="mt-4 bg-teal-600 p-4 rounded">
+    <div class="mt-4 bg-teal-600 p-4 rounded inline-block">
         <h1 class="text-4xl font-extrabold text-gray-900">
             <a href="{{ url_for('index')}}">BSL Menu</a>
         </h1>
