--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="text-lg px-2 py-2 my-2 bg-green-400 rounded">
+<div class="text-3xl font-extrabold px-2 py-2 my-2 bg-orange-400 rounded inline-block">
     <h1>
         {{ restaurant.name }}
     </h1>
