--- a/bsl_menu/templates/restaurants.html
+++ b/bsl_menu/templates/restaurants.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 {% if restaurants %}
     <div class="grid">
     {% for restaurant in restaurants %}
@@ -12,3 +14,4 @@
 </div>
 {% endif %}
 {% include 'pagination.html' %}
+{% endblock %}
