--- a/bsl_menu/templates/menu_item_tile.html
+++ b/bsl_menu/templates/menu_item_tile.html
@@ -1,7 +1,6 @@
-<div class="bg-slate-700 rounded my-2 max-w-max">
+<div class="border rounded my-2 max-w-max bg-green-400">
     <div class="p-2">
-        <p class="font-bold text-gray-200">{{ menu_item.name }}</p>
-        <p class="font-bold text-gray-100">{{ menu_item.category }}</p>
+        <p class="font-bold">{{ menu_item.name }}</p>
     </div>
     <div>
         <img
