--- a/bsl_menu/templates/restaurant_search_form.html
+++ b/bsl_menu/templates/restaurant_search_form.html
@@ -3,7 +3,7 @@
         type="search"
         placeholder="Search restaurants"
         id="search-restaurant"
-        class="rounded px-4 py-2"
+        class="border rounded px-4 py-2"
         name="name"
         hx-get="/search?skip=0&limit=5"
         hx-trigger="input changed delay:500ms, search"
