--- a/bsl_menu/templates/pagination.html
+++ b/bsl_menu/templates/pagination.html
@@ -1,8 +1,12 @@
-<a
-    class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded"
-    href="{{ url_for('get_restaurants') }}?skip={{ skip | int - limit | int }}&limit={{ limit }}"
->&larr; Previous</a>
-<a
-    class="bg-blue-700 hover:bg-blue-600 text-gray-200 hover:text-slate-800 px-4 py-2 my-2 rounded"
-        href="{{ url_for('get_restaurants') }}?skip={{ skip | int + limit | int }}&limit={{ limit }}"
->Next &rarr;</a>
+<div class="my-2 py-2">
+    <a
+        class="border hover:bg-blue-600 rounded px-4 py-2 my-2"
+        href="{{ url_for('get_restaurants') }}?skip={{ skip | int - limit | int }}&limit={{ limit }}">
+        &larr; Previous
+    </a>
+    <a
+        class="border rounded hover:bg-blue-600 px-4 py-2 my-2"
+            href="{{ url_for('get_restaurants') }}?skip={{ skip | int + limit | int }}&limit={{ limit }}">
+        Next &rarr;
+    </a>
+</div>
