--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -1,15 +1,25 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="text-3xl font-extrabold px-2 py-2 my-2 bg-orange-400 rounded inline-block">
+<div class="border rounded text-3xl font-extrabold px-2 py-2 my-2 inline-block">
     <h1>
         {{ restaurant.name }}
     </h1>
 </div>
 <div>
-    {% for menu_item in restaurant.menu_items %}
-    <ul>
-        {% include 'menu_item_tile.html' %}
-    </ul>
+    {% if not restaurant.menu_items %}
+    Nothing menu items to show
+    {% endif %}
+    {% for category in categories %}
+        <div class="border rounded bg-blue-500 my-2">
+            <h1 class="text-l font-bold m-4">{{ category }}</h1>
+            {% for menu_item in restaurant.menu_items %}
+                {% if menu_item.category == category %}
+                    <ul>
+                        {% include 'menu_item_tile.html' %}
+                    </ul>
+                {% endif %}
+            {% endfor %}
+        </div>
     {% endfor %}
 </div>
 {% endblock %}
