--- a/bsl_menu/templates/restaurants.html
+++ b/bsl_menu/templates/restaurants.html
@@ -1,17 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if restaurants %}
-    <div class="grid">
-    {% for restaurant in restaurants %}
-        {% include 'restaurant_tile.html' %}
-    {% endfor %}
-    </div>
-
-
-{% else %}
-<div class="px-4 py-2 my-2 rounded text-gray-200 bg-teal-600 max-w-max">
-    No restaurants to show
+<div class="border rounded grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-10 md:px-20">
+{% for restaurant in restaurants %}
+    {% include 'restaurant_tile.html' %}
+{% endfor %}
 </div>
-{% endif %}
 {% include 'pagination.html' %}
 {% endblock %}
