--- a/bsl_menu/templates/visual_search_form.html
+++ b/bsl_menu/templates/visual_search_form.html
@@ -3,7 +3,7 @@
         type="search"
         placeholder="Search visuals"
         id="search-visuals"
-        class="rounded px-4 py-2"
+        class="border rounded px-4 py-2"
         name="name"
         hx-get="{{ url_for('search_visuals_by_name_view') }}"
         hx-trigger="input changed delay:500ms, search"
