--- a/bsl_menu/templates/register_restaurant.html
+++ b/bsl_menu/templates/register_restaurant.html
@@ -25,14 +25,16 @@
              <button
                 class="border rounded max-w-96 hover:bg-green-600 px-4 py-2"
                 hx-get="{{ url_for ('visuals_search_form') }}"
-                hx-target="#visual-selection-form"
-            >From collection</button>
+                hx-target="#visual-selection-form">
+                 View visuals
+             </button>
 
             <button disabled
                 class="border rounded max-w-96 px-4 py-2 line-through"
                 hx-get="{{ url_for ('visual_upload_form') }}"
-                hx-target="#visual-selection-form"
-            >Upload your own</button>
+                hx-target="#visual-selection-form">
+                Upload your own
+            </button>
         </div>
 
         <div id="visual-selection-form"></div>
