--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <title>BSL Menu</title>
-    <script src="https://unpkg.com/htmx.org@1.9.10"></script>
+    <script src="{{ url_for('static', path='js/htmx.min.js')}}"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body class="bg-blue-400">
     <div class="bg-blue-200 p-4">
