--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
     <title>BSL Menu</title>
-    <script src="{{ url_for('static', path='js/htmx.min.js')}}"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
+<!--    <script src="{{ url_for('static', path='js/htmx.min.js')}}"></script>-->
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
