--- a/bsl_menu/templates/restaurant_register.html
+++ b/bsl_menu/templates/restaurant_register.html
@@ -20,24 +20,7 @@
             class="border rounded px-2 py-2 max-w-96 cursor-pointer"
             type="number" id="restaurant-date-opened" name="year_opened" required>
 
-        <h1>Select visual</h1>
-        <div class="columns-2 ">
-             <button
-                class="border rounded max-w-96 hover:bg-green-600 px-4 py-2"
-                hx-get="/visuals/search-form/"
-                hx-target="#visual-selection-form">
-                 View visuals
-             </button>
-
-            <button disabled
-                class="border rounded max-w-96 px-4 py-2 line-through"
-                hx-get="/visuals/upload-form/"
-                hx-target="#visual-selection-form">
-                Upload your own
-            </button>
-        </div>
-
-        <div id="visual-selection-form"></div>
+        {% include 'visual_form.html' %}
 
         <button
             type="submit"
