--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -1,9 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="border rounded text-3xl font-extrabold px-2 py-2 my-2 inline-block">
-    <h1>
-        {{ restaurant.name }}
-    </h1>
+    {% include 'restaurant_tile.html' %}
 </div>
 <div>
     {% if not restaurant.menu_items %}
