--- a/bsl_menu/templates/visual_form.html
+++ b/bsl_menu/templates/visual_form.html
@@ -1,14 +1,14 @@
 <h1>Select visual</h1>
 <div class="columns-2 ">
      <button
-        class="border rounded max-w-96 hover:bg-green-600 px-4 py-2"
+        class="border rounded max-w-96 px-4 py-2 hover:bg-green-600 "
         hx-get="/visuals/search-form/"
         hx-target="#visual-selection-form">
          View visuals
      </button>
 
-    <button disabled
-        class="border rounded max-w-96 px-4 py-2 line-through"
+    <button
+        class="border rounded max-w-96 px-4 py-2 hover:bg-green-600 "
         hx-get="/visuals/upload-form/"
         hx-target="#visual-selection-form">
         Upload your own
