--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -7,6 +7,11 @@
     {% if not restaurant.menu_items %}
     Nothing menu items to show
     {% endif %}
+    <a href="{{ url_for('add_menu_item_for_restaurant', restaurant_id=restaurant.id, restaurant_name=restaurant.name) }}">
+        <div class="border rounded hover:bg-green-600 px-4 py-2 my-2">
+            Add menu item
+        </div>
+    </a>
     {% for category in categories %}
         <div class="border rounded bg-blue-500 my-2">
             <h1 class="text-l font-bold m-4">{{ category }}</h1>
