--- a/bsl_menu/templates/visual_upload_form.html
+++ b/bsl_menu/templates/visual_upload_form.html
@@ -7,8 +7,7 @@
         rows="4"
         class="border rounded max-w-96 px-4 py-2 block"
         name="visual_description"
-        placeholder="Describe your visual..." required>
-    </textarea>
+        placeholder="Describe your visual..." required></textarea>
     <input
         class="border rounded px-2 py-2 max-w-96 rounded cursor-pointer"
         id="sl-visual-input"
