add menu item frontend form

--- a/bsl_menu/templates/menu_item_add.html
+++ b/bsl_menu/templates/menu_item_add.html
@@ -3,9 +3,35 @@
 <form method="POST" enctype="multipart/form-data" class="max-w-96">
     <h1 class="my-2">Add menu item for {{ restaurant_name }}</h1>
     <div class="grid grid-cols-1 gap-4">
-        <input class="border rounded max-w-96 px-4 py-2" type="text" id="name" name="name" placeholder="Restaurant Name" required>
-        <input class="border rounded max-w-96 px-4 py-2" type="text" id="category" name="category" placeholder="Category" required>
-        <textarea rows="4" class="border rounded max-w-96 px-4 py-2 block" name="description" placeholder="Describe your restaurant..." required></textarea>
+        <input class="border rounded max-w-96 px-4 py-2" type="text" id="name" name="name" placeholder="Menu item name" required>
+
+        <h1>Category</h1>
+        <div>
+            <input type="radio" name="option" id="1" value="1" class="peer hidden" checked />
+            <label for="1" class="block cursor-pointer select-none rounded-xl p-2 text-center peer-checked:bg-blue-500 peer-checked:font-bold peer-checked:text-white">
+                Starter
+            </label>
+        </div>
+        <div>
+            <input type="radio" name="option" id="2" value="2" class="peer hidden" />
+            <label for="2" class="block cursor-pointer select-none rounded-xl p-2 text-center peer-checked:bg-blue-500 peer-checked:font-bold peer-checked:text-white">
+                Mains
+            </label>
+        </div>
+        <div>
+            <input type="radio" name="option" id="3" value="3" class="peer hidden" />
+            <label for="3" class="block cursor-pointer select-none rounded-xl p-2 text-center peer-checked:bg-blue-500 peer-checked:font-bold peer-checked:text-white">
+                Dessert
+            </label>
+        </div>
+        <div>
+            <input type="radio" name="option" id="4" value="3" class="peer hidden" />
+            <label for="4" class="block cursor-pointer select-none rounded-xl p-2 text-center peer-checked:bg-blue-500 peer-checked:font-bold peer-checked:text-white">
+                Drink
+            </label>
+        </div>
+
+        <textarea rows="4" class="border rounded max-w-96 px-4 py-2 block" name="description" placeholder="Describe the dish" required></textarea>
         {% include 'visual_form.html' %}
         <button
             type="submit"
