submit menu item

--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -13,13 +13,23 @@
     <div class="bg-blue-200 p-4">
         <nav class="flex items-center gap-2">
             <a href="{{ url_for('index')}}">
-                <div class="border rounded text-4xl font-extrabold p-4">
+                <div class="border rounded text-2xl font-extrabold p-4">
                     BSL Menu
                 </div>
             </a>
+            <div>
+                <p>Accessible menu for BSL users</p>
+            </div>
+        </nav>
+        <nav class="flex items-center gap-2">
             <a href="{{ url_for('get_restaurants') }}?skip=0&limit=10">
                 <div class="border rounded hover:bg-blue-600 px-4 py-2 my-2">
-                    View Restaurants
+                    Restaurants
+                </div>
+            </a>
+            <a href="{{ url_for('get_visuals') }}?skip=0&limit=10">
+                <div class="border rounded hover:bg-blue-600 px-4 py-2 my-2">
+                    Visuals
                 </div>
             </a>
             <a href="{{ url_for('register_restaurant_page') }}">
@@ -28,7 +38,7 @@
                 </div>
             </a>
         </nav>
-        <p>Accessible menu for BSL users</p>
+
     </div>
     <div id="main-content" class="m-2 p-2">
         {% block content %}
