--- a/bsl_menu/templates/menu_item_tile.html
+++ b/bsl_menu/templates/menu_item_tile.html
@@ -1,6 +1,7 @@
 <div class="border rounded my-2 max-w-max bg-green-400">
     <div class="p-2">
-        <p class="font-bold">{{ menu_item.name }}</p>
+        <div class="font-bold">{{ menu_item.name }} £{{ menu_item.price }}</div>
+        <p>{{ menu_item.description }}</p>
     </div>
     <div>
         <img
