--- a/bsl_menu/templates/restaurants.html
+++ b/bsl_menu/templates/restaurants.html
@@ -8,5 +8,5 @@
     No restaurants to view
 {% endif %}
 </div>
-{% include 'restaurant_pagination.html' %}
+{% include 'visual_pagination.html' %}
 {% endblock %}
