--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-<div class="border rounded text-3xl font-extrabold px-2 py-2 my-2 inline-block">
-    {% include 'restaurant_tile.html' %}
-</div>
+{% include 'restaurant_tile.html' %}
 <div>
+    <div class="border rounded my-2 p-2">
+        <p>Established {{ restaurant.date_opened }}</p>
+        <p>{{ restaurant.description }}</p>
+    </div>
+
     {% if not restaurant.menu_items %}
     Nothing menu items to show
     {% endif %}
     <a href="{{ url_for('add_menu_item_to_restaurant_form', restaurant_id=restaurant.id, restaurant_name=restaurant.name)}}">
-        <div class="border rounded text-2xl font-extrabold p-4">
+        <div class="border rounded text-2xl font-extrabold p-4 hover:bg-green-500">
             Add menu item
         </div>
     </a>
