--- a/bsl_menu/templates/visual_form.html
+++ b/bsl_menu/templates/visual_form.html
@@ -9,7 +9,7 @@
 
     <button
         class="border rounded max-w-96 px-4 py-2 hover:bg-green-600 "
-        hx-get="/visuals/upload-form/"
+        hx-get="/visuals/upload/"
         hx-target="#visual-selection-form">
         Upload your own
     </button>
