--- a/bsl_menu/templates/visual_pagination.html
+++ b/bsl_menu/templates/visual_pagination.html
@@ -6,7 +6,7 @@
         &larr; Previous
     </a>
     {% endif %}
-    {% if visuals | length > limit %}
+    {% if visuals | length == limit %}
     <a
         class="border rounded hover:bg-blue-600 px-4 py-2 my-2"
             href="{{ url_for('get_visuals') }}?skip={{ skip | int + limit | int }}&limit={{ limit }}">
