--- a/bsl_menu/templates/visual_upload_form.html
+++ b/bsl_menu/templates/visual_upload_form.html
@@ -1,16 +1,23 @@
-<div class="grid grid-cols-1 gap-4">
-    <input
-        class="border rounded max-w-96 px-4 py-2"
-        type="text" id="visual_name" name="visual_name"
-        placeholder="Visual Name" required>
-    <textarea
-        rows="4"
-        class="border rounded max-w-96 px-4 py-2 block"
-        name="visual_description"
-        placeholder="Describe your visual..." required></textarea>
-    <input
-        class="border rounded px-2 py-2 max-w-96 rounded cursor-pointer"
-        id="sl-visual-input"
-        name="visual_file"
-        type="file" required>
-</div>
+<form method="POST" enctype="multipart/form-data">
+    <div class="grid grid-cols-1 gap-4">
+        <input
+            class="border rounded max-w-96 px-4 py-2"
+            type="text" id="visual_name" name="visual_name"
+            placeholder="Visual Name" required>
+        <textarea
+            rows="4"
+            class="border rounded max-w-96 px-4 py-2 block"
+            name="visual_description"
+            placeholder="Describe your visual..." required></textarea>
+        <input
+            class="border rounded px-2 py-2 max-w-96 rounded cursor-pointer"
+            id="sl-visual-input"
+            name="visual_file"
+            type="file" required>
+        <button
+            type="submit"
+            class="border rounded max-w-24 hover:bg-green-600 px-4 py-2 my-2">
+            Upload visual
+        </button>
+    </div>
+</form>
