--- a/bsl_menu/templates/visuals.html
+++ b/bsl_menu/templates/visuals.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="border rounded grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-10 md:px-20">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
 {% for visual in visuals %}
     {% include 'visual_tile_radio.html' %}
 {% endfor %}
