--- a/bsl_menu/templates/restaurant_detail.html
+++ b/bsl_menu/templates/restaurant_detail.html
@@ -8,7 +8,7 @@
     </div>
 
     {% if not restaurant.menu_items %}
-    Nothing menu items to show
+    No menu items to show
     {% endif %}
     <a href="{{ url_for('add_menu_item_to_restaurant_form', restaurant_id=restaurant.id, restaurant_name=restaurant.name)}}">
         <div class="border rounded text-2xl font-extrabold p-4 hover:bg-green-500">
