--- a/bsl_menu/templates/visual_upload_form.html
+++ b/bsl_menu/templates/visual_upload_form.html
@@ -1,3 +1,8 @@
+<div class="p-2 my-2 rounded  text-white-100 bg-red-700">
+    Visual upload not currently implemented. Please select an existing visual instead
+    by clicking 'View visuals'
+</div>
+
 <form method="POST" enctype="multipart/form-data">
     <div class="grid grid-cols-1 gap-4">
         <input
