--- a/bsl_menu/templates/visual_search_form.html
+++ b/bsl_menu/templates/visual_search_form.html
@@ -7,8 +7,7 @@
         name="name"
         hx-get="/visuals/search/"
         hx-trigger="input changed delay:500ms, search"
-        hx-target="#search-visuals-results"
+        hx-target="#visuals-list"
     >
-<!--    <button class="bg-slate-700 text-gray-200 px-4 py-2 rounded" type="submit" value="Search">Go</button>-->
 </form>
-<div class="my-2" id="search-visuals-results"></div>
+<div id="visuals-list"></div>
