--- a/bsl_menu/templates/index.html
+++ b/bsl_menu/templates/index.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+<p>
+    Welcome to BSL Menu. This is a demo of a menu that is accessible to BSL users.
+</p>
 {% block content %}
 
 {% endblock %}
