--- a/bsl_menu/templates/base.html
+++ b/bsl_menu/templates/base.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="{{ url_for('static', path='/css/styles.css') }}" rel="stylesheet">
 </head>
-<body class="bg-blue-400 max-w-screen-l">
+<body class="bg-blue-400 max-w-screen-l bsl-font-1">
     <div class="bg-blue-200 px-4 pyt-4">
         <nav class="flex items-center gap-2">
             <a href="{{ url_for('index')}}">
